fix: message-box at>memberlist - text-overflow and responsive

--- a/src/app/components/message-box/message-box.component.scss
+++ b/src/app/components/message-box/message-box.component.scss
@@ -101,20 +101,21 @@
         position: absolute;
         left: 0;
         bottom: calc(100% + 0.5px);
+        padding: 12px 20px;
+        max-width: 400px;
+        max-height: 354px;
+        width: 100%;
+        box-shadow: 0 2px 12px rgba(0, 0, 0, 0.18);
+        border-radius: 20px 20px 0 20px;
         background: white;
         list-style-type: none;
         font-size: 21px;
-        max-width: 400px;
-        max-height: 354px;
-        @include scrollbar();
-        overflow-y: auto;
         display: flex;
         flex-direction: column;
         gap: 10px;
-        padding: 12px 20px;
-        border-radius: 20px 20px 0 20px;
-        box-shadow: 0 2px 12px rgba(0, 0, 0, 0.18);
+        overflow-y: auto;
         animation: expand 225ms ease;
+        @include scrollbar();
 
         @keyframes expand {
             from {
@@ -127,14 +128,14 @@
         }
 
         li {
+            padding: 8px 10px;
             width: 100%;
             height: 58px;
+            border-radius: 30px;
             display: flex;
             align-items: center;
-            border-radius: 30px;
-            padding: 8px 10px;
-            @include transition(75ms);
             cursor: pointer;
+            @include transition(75ms);
 
             img {
                 margin-left: -5px;
@@ -143,6 +144,11 @@
                 height: 50px;
                 border-radius: 50%;
                 object-fit: cover;
+            }
+
+            span {
+                width: 100%;
+                @include textOverflowMulti();
             }
 
             &:hover {
